--- a/entity-service/requirements.txt
+++ b/entity-service/requirements.txt
@@ -1,10 +1,10 @@
-falcon
-sqlalchemy==1.2.7
-gunicorn
-jsonschema
-falcon-cors
-mysql-connector-python
-falcon-auth
-httpie
-cryptography
-alembic
+falcon>=1.4.1
+sqlalchemy>=1.2.7
+gunicorn>=19.9.0
+jsonschema>=2.6.0
+falcon-cors>=1.1.7
+mysql-connector-python>=8.0.13
+falcon-auth>=1.1.0
+httpie>=1.0.0
+cryptography>=2.3.1
+alembic>=1.0.3
