--- a/task-service/package.json
+++ b/task-service/package.json
@@ -4,17 +4,20 @@
   "description": "Receive and record booking information",
   "main": "index.js",
   "scripts": {
-    "start": "concurrently \"npm run cancel-worker\" \"npm run book-worker\"",
+    "start": "concurrently \"npm run server\" \"npm run cancel-worker\" \"npm run book-worker\"",
     "test": "echo \"Error: no test specified\" && exit 1",
+    "server": "node api.js",
     "cancel-worker": "node cancel-worker.js",
     "book-worker": "node book-flight.js"
   },
-  "author": "Husnulzaki Wibisono Haryadi",
+  "author": "Jekk, Dery, Aya",
   "license": "ISC",
   "dependencies": {
     "camunda-external-task-client-js": "^1.1.0-alpha1",
     "concurrently": "^4.1.0",
     "request": "^2.88.0",
-    "soap": "^0.25.0"
+    "soap": "^0.25.0",
+    "express": "~4.0.0",
+    "body-parser": "~1.0.1"
   }
 }
